--- a/summarizer_fe/index.html
+++ b/summarizer_fe/index.html
@@ -11,17 +11,16 @@
     <div class="container">
         <h1>Summarizer</h1>
         <div class="tabs">
-            <button class="tab-button active" data-tab="api-keys">API Keys</button>
+            <button class="tab-button active" data-tab="api-keys">API Keys & Paths</button>
             <button class="tab-button" data-tab="playlist">Playlist</button>
             <button class="tab-button" data-tab="transcript">Transcript</button>
         </div>
         <div class="tab-content active" id="api-keys">
             <form id="apiForm">
                 <div class="input-group">
-                    <label for="notionApiKey">Notion API Key</label>
+                    <label for="obsidianVaultPath">Obsidian Vault Path</label>
                     <div class="input-with-icon">
-                        <input type="password" id="notionApiKey" name="notionApiKey" required>
-                        <i class="fas fa-eye toggle-password" data-target="notionApiKey"></i>
+                        <input type="text" id="obsidianVaultPath" name="obsidianVaultPath" required>
                     </div>
                 </div>
                 <div class="input-group">
@@ -32,13 +31,13 @@
                     </div>
                 </div>
                 <div class="input-group">
-                    <label for="openaiApiKey">OpenAI API Key</label>
+                    <label for="mistralApiKey">Mistral API Key</label>
                     <div class="input-with-icon">
-                        <input type="password" id="openaiApiKey" name="openaiApiKey" required>
-                        <i class="fas fa-eye toggle-password" data-target="openaiApiKey"></i>
+                        <input type="password" id="mistralApiKey" name="mistralApiKey" required>
+                        <i class="fas fa-eye toggle-password" data-target="mistralApiKey"></i>
                     </div>
                 </div>
-                <button type="submit">Save API Keys</button>
+                <button type="submit">Save Settings</button>
             </form>
         </div>
         <div class="tab-content" id="playlist">
@@ -76,15 +75,15 @@
             </form>
         </div>
         <div id="loading" class="loading hidden">
-            <div class="spinner"></div> <!-- This div is the spinner -->
+            <div class="spinner"></div>
             <p>Processing...</p>
         </div>
         <div id="success" class="loading hidden">
-            <i class="far fa-check-circle success icon-large"></i> <!-- Success icon -->
+            <i class="far fa-check-circle success icon-large"></i>
             <p>Success</p>
         </div>
         <div id="error" class="loading hidden">
-            <i class="far fa-times-circle error icon-large"></i> <!-- Error icon -->
+            <i class="far fa-times-circle error icon-large"></i>
             <p>Error</p>
         </div>
     </div>
