add prompts; add transcript

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summarizer</title>
+    <title>FOCUS</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Summarizer</h1>
+        <h1>FOCUS</h1>
         <div class="tabs">
             <button class="tab-button active" data-tab="api-keys">API Keys & Paths</button>
             <button class="tab-button" data-tab="playlist">Playlist</button>
